# antennaarray

./: .gitignore  README.md  antenna_diagram.m  antenna_directivity_diagram.m
AuditionLabFilter/: _link.url  labfilter.cpp  labfilter.def  labfilter.sln  labfilter.vcxproj
AuditionLabFilter/libsndfile/: lab.flt  sndfile.h  sndfile.hh
antennaarray/: README.md  antenna_diagram.m  antenna_directivity_diagram.m  antenna_optimization.m
antennaarray/examples/: ant_circle_3_07.xml  ant_circle_3_09.xml  ant_circle_3_13.xml  ant_circle_5_02.xml  ant_circle_5_07.xml  ant_circle_5_08.xml  ant_circle_5_13.xml  ant_cross.xml  ant_line.xml  ant_rhomb_4.xml  ant_rhomb_5.xml  ant_test.xml
antennaarray/xml_io_tools/: xml_read.m  xml_write.m
arm/: CMakeLists.txt  License.txt  ReadMe.txt
arm/CMake_modules/: FindACML.cmake  FindFFTW3.cmake  FindICONV.cmake  FindIPP.cmake  FindLibDL.cmake  FindPORTAUDIO.cmake  FindSNDFILE.cmake
arm/audiofront/: CMakeLists.txt  audiofront.cpp  pa_devs.c  paex_read_write_wire.c
arm/auxiliary/: random.h  unit_test_aux.h.in  version.h.in  wav_markers_regions.cpp  wav_markers_regions.h
arm/auxiliary/dsp/: fft.h  filter.h  lpc.h
arm/auxiliary/libresample/src/: filterkit.c  resample.c
arm/auxiliary/libresample/tests/: resample-sndfile.c
arm/auxiliary/libsvm/: svm.cpp  svm.h
arm/monolog/: CMakeLists.txt  alaphones_names.h  allophone_tts.cpp  allophone_tts.h  audio.cpp  audio.h  lTTS.cpp  lTTS.h  monolog.cpp  monolog.xml  random.h  sls_gen_text.cpp  text_generator.cpp  text_generator.h  tts.xml
arm/monolog/doc/: Latter.doc  Synth4PC.7z
auxiliary/: collage_generator.m  mkv2ttxt.m  mkv_make_chapters.m  photo_proc.fig  photo_proc.m  video_info.m
doc/: mic_array.doc
examples/: ant_circle_5_03.xml  ant_circle_5_04.xml  ant_circle_5_05.xml  ant_spiral.xml  ant_test14.xml  ant_test_cross.xml
ir_stand/: ir_colormap.m  ir_setup_acoustic.fig  ir_setup_acoustic.m  ir_setup_emi.fig  ir_setup_emi.m  ir_setup_thresholds.fig  ir_setup_thresholds.m  ir_setup_thresholds_simple.fig  ir_setup_thresholds_simple.m  ir_setup_video.fig  ir_setup_video.m  ir_stand.fig  ir_stand.m  ir_stand_config.xml  playrec.mexw64  protocol.tif  set_icon.m  struct_merge.m
ir_stand/setup/: setup_script.iss
ir_stand/sls/: det_res.txt  speed.txt  start.bat
phase/: phasodispfft.m  test_fan_chirp.m  test_fft_phase.m  test_fft_win.m
proj/arm/trunk/src/c++/audiofront/: CMakeLists.txt  audiofront.cpp
proj/ir_stand/: freq_mod.mn  ir_colormap.m  ir_setup_acoustic.fig  ir_setup_acoustic.m  ir_setup_emi.fig  ir_setup_emi.m  ir_setup_thresholds.fig  ir_setup_thresholds.m  ir_setup_thresholds_simple.m  ir_setup_video.fig  ir_setup_video.m  ir_stand.fig  ir_stand.m  ir_stand_config.mat  ir_stand_config.xml  ir_stand_description.doc  ir_stand_struct.vsd  ir_stat_test.m  ir_test_mod.asv  ir_test_mod.m  playrec.mexw32
proj/phase/: test_fan_chirp.m  test_fft_phase.m
sls/: SLS_ClassCfgDlg.fig  SLS_ClassCfgDlg.m  SLS_GUI.fig  SLS_GUI.m  SLS_SegCfgDlg.fig  SLS_SegCfgDlg.m  SLS_SegDistCalc.m  SLS_SegLSF.m  SLS_SegMFCC.m  SLS_SegPLP.m  SLS_SegRastaPLP.m  SLS_main.m  SLS_pdist.chm  sls_automake.m  sls_segment.m  xcorr_up.m
sls/auxiliary/: wav_markers_read.m  wav_markers_write.m  wav_regions_read.m  xml_struct_load.m  xml_struct_save.m
sls/thirdpart/rastamat/: rm_deltas.m  rm_fft2barkmx.m  rm_hz2bark.m  rm_invmelfcc.m  rm_invpostaud.m  rm_lifter.m  rm_lpc2spec.m  rm_process_options.m  rm_rastafilt.m
sls/thirdpart/voicebox/: vb_atan2sc.m  vb_bitsprec.m  vb_ccwarpf.m  vb_cep2pow.m  vb_choosenk.m  vb_distchar.m  vb_distchpf.m  vb_distisar.m  vb_distispf.m  vb_distitar.m  vb_distitpf.m  vb_ditherq.m  vb_dlyapsq.m  vb_dypsa.m  vb_entropy.m  vb_estnoisem.m  vb_ewgrpdel.m  vb_figbolden.m  vb_findpeaks.m  vb_finishat.m  vb_frac2bin.m  vb_fram2wav.m  vb_frq2bark.m  vb_frq2erb.m  vb_frq2mel.m  vb_fxrapt.m  vb_gaussmix.m  vb_gaussmixd.m  vb_gaussmixp.m  vb_gmmlpdf.m  vb_histndim.m  vb_importsii.m  vb_irdct.m  vb_irfft.m  vb_kmeanhar.m  vb_kmeanlbg.m  vb_ldatrace.m  vb_lin2pcmu.m  (+95 more)
slsauto/: addpath_recursive.m  simplegettext.m  sls_segment.m  slsauto_000_main.m  slsauto_010_pitchraw.m  slsauto_batch_processing.m  slsauto_getpath.m  slsauto_lpc_analyse.m  slsauto_lpc_synth.m  slsauto_lpcorderfit.m  slsauto_main.fig  slsauto_main.m  slsauto_main_lang.mat  slsauto_makepath.m  slsauto_parameterization.m  slsauto_phones_mark.m  slsauto_pitch_editor.m  slsauto_pitch_plot.m  slsauto_pitch_prosody.m  slsauto_pitch_raw.m  slsauto_pitch_syntagm_gen.m  slsauto_pitch_syntagm_stat.m  slsauto_pitch_syntagma_gen.m  slsauto_pitch_syntagma_stat.m  slsauto_pitch_vu2lab.m  slsauto_pitchraw.m  slsauto_plotpitch.m  slsauto_prosody.m  slsauto_syntagm_gen.m  slsauto_syntagm_stat.m  slsauto_text_generator.m  slsauto_text_statistics.m  slsauto_vu2lab.m
slsauto/auxiliary/: filt2way.m  filter_fir_nodelay.m  gaussfilter.m  gaussfilter_fit.m  lpcorder_fit.m  lsf2poly_even.m  on_zoom_pan.m  slsauto_pitch_irapt_stat.m
trunk/: antenna_diagram.m  antenna_directivity_diagram.m  antenna_optimization.m
trunk/examples/: ant_boobs.xml  ant_circle_3_05.xml  ant_circle_5_06.xml  ant_circle_5_09.xml  ant_cross_1.xml  ant_rhomb_3.xml
trunk/xml_io_tools/: xml_tutorial_script.m
voice-noise-music/: README.md
voice-noise-music/matlab/: Timit_base.m  addpath_recursive.m  vnm_3sec_base.m  vnm_3sec_mixed_signal.m  vnm_3sec_random_mixing.m  vnm_add_noise.m  vnm_add_noise_to_signal.m  vnm_classifier_gmm.m  vnm_classifier_libsvm.m  vnm_classifier_proc.m  vnm_classify.m  vnm_classify_cfg.m  vnm_examine_obs.m  vnm_feature_select.m  vnm_feature_select_graph.m  vnm_load_db.m  vnm_lpc.m  vnm_main.m  vnm_meta_delta.m  vnm_meta_intonogram.m  vnm_meta_isnan.m  vnm_meta_nomean.m  vnm_meta_nomedian.m  vnm_meta_openear.m  vnm_meta_pca.m  vnm_meta_select_obs.m  vnm_meta_split.m  vnm_meta_stat.m  vnm_meta_sub_div_median.m  vnm_meta_teo.m  vnm_meta_vad.m  vnm_obs_hos.m  vnm_obs_lpcc.m  vnm_obs_lsf.m  vnm_obs_mfcc.m  vnm_obs_phonfunc.m  vnm_obs_pitch.m  vnm_obs_power.m  vnm_obs_rceps.m  vnm_obs_specrel.m  (+7 more)
xml_io_tools/html/: xml_tutorial_script.html
(+261 files in other folders)
